--- a/app/views/master/film/edit.ejs
+++ b/app/views/master/film/edit.ejs
@@ -29,7 +29,7 @@
   <% /* 更新ボタン */ %>
   <div class="form-group">
     <div class="btn-area">
-      <a class="btn btn-ok"><span>更新する</span></a>
+      <a class="btn btn-ok btn-primary">更新する</a>
     </div>
   </div>
 </form>
