--- a/app/views/master/ticketType/add.ejs
+++ b/app/views/master/ticketType/add.ejs
@@ -47,7 +47,7 @@ Aa-5
   <% /* 登録ボタン */ %>
   <div class="form-group">
     <div class="btn-area">
-      <a class="btn btn-ok"><span>登録する</span></a>
+      <a class="btn btn-ok btn-primary">登録する</a>
     </div>
   </div>
 </form>
