--- a/app/views/master/ticketType/index.ejs
+++ b/app/views/master/ticketType/index.ejs
@@ -52,11 +52,9 @@ Aa-6
     </div>
     <% /* 検索ボタン */ %>
     <div class="form-group">
-      <div class="btn-area">
-        <a class="btn btn-ok search"><span>検索する</span></a>
-      </div>
-      <div class="btn-area">
-        <a class='reset-condition'><span>検索内容リセット</span></a>
+      <div class="panel-body">
+        <a class="btn btn-ok search btn-primary"><span>検索する</span></a>
+        <a class="reset-condition btn btn-danger"><span>検索内容リセット</span></a>
       </div>
     </div>
   </form>
