--- a/app/views/master/ticketTypeGroup/update.ejs
+++ b/app/views/master/ticketTypeGroup/update.ejs
@@ -26,7 +26,7 @@ Aa-7
         <% /* 登録ボタン */ %>
         <div class="form-group">
             <div class="btn-area">
-                <a class="btn btn-ok"><span>更新する</span></a>
+                <a class="btn btn-ok btn-primary">更新する</a>
             </div>
         </div>
     </form>
