--- a/app/views/master/film/add.ejs
+++ b/app/views/master/film/add.ejs
@@ -38,7 +38,7 @@
   <% /* 登録ボタン */ %>
   <div class="form-group">
     <div class="btn-area">
-      <a class="btn btn-ok"><span>登録する</span></a>
+      <a class="btn btn-ok btn-primary">登録する</a>
     </div>
   </div>
 </form>
