--- a/app/views/master/ticketType/update.ejs
+++ b/app/views/master/ticketType/update.ejs
@@ -31,7 +31,7 @@ Aa-5
   <% /* 登録ボタン */ %>
   <div class="form-group">
     <div class="btn-area">
-      <a class="btn btn-ok"><span>更新する</span></a>
+      <a class="btn btn-ok btn-primary">更新する</a>
     </div>
   </div>
 </form>
