--- a/app/views/master/film/edit.ejs
+++ b/app/views/master/film/edit.ejs
@@ -1,38 +1,42 @@
+<%- contentFor('title') %>
+作品マスタ編集
+<%- contentFor('displayId') %>
+Aa-2
+<%- contentFor('styles') %>
+
+<%- contentFor('scripts') %>
+
+<%- contentFor('body') %>
 <div class="col-sm-12 form-container">
-<% /* フォーム */ %>
-<form method="post" class="form-horizontal" >
-  <div class="menu-group">
-    <div style="padding:0px 0px 4px 10px;" >
-      <a href="/master/films">作品マスタ一覧へ</a>
-    </div>
-    <% /* メッセージ */ %>
-    <% if (message !== undefined) { %>
-        <p class="error message">
-          <%= message %>
-        </p>
-    <% } %>
-  </div>
+    <% /* フォーム */ %>
+    <form method="post" class="form-horizontal" >
+        <div class="menu-group">
+            <% /* メッセージ */ %>
+            <% if (message !== undefined) { %>
+            <p class="error message text-danger panel-body bg-danger"><%= message %></p>
+            <% } %>
+        </div>
 
-  <% /* 作品コード */ %>
-  <div class="form-group ">
-    <label class="col-sm-2 control-label label-title">
-      作品コード
-    </label>
-    <div class="col-sm-10">
-      <input readonly disabled style="width:auto;" type="text" class="form-control" name="_id" id="_id" placeholder="" maxlength=64 value="<%= forms.code %>">
-    </div>
-  </div>
+        <% /* 作品コード */ %>
+        <div class="form-group ">
+            <label class="col-sm-3 control-label label-title">
+            作品コード
+            </label>
+            <div class="col-sm-9">
+                <input readonly disabled style="width:auto;" type="text" class="form-control" name="_id" id="_id" placeholder="" maxlength=64 value="<%= forms.code %>">
+            </div>
+        </div>
 
-  <% /* 登録・更新共通部 */ %>
-  <%- include('form', { forms: forms }) %>
+        <% /* 登録・更新共通部 */ %>
+        <%- include('form', { forms: forms }) %>
 
-  <% /* 更新ボタン */ %>
-  <div class="form-group">
-    <div class="btn-area">
-      <a class="btn btn-ok btn-primary">更新する</a>
-    </div>
-  </div>
-</form>
+        <% /* 更新ボタン */ %>
+        <div class="form-group">
+            <div class="btn-area panel-body">
+                <a class="btn btn-ok btn-primary">更新する</a>
+            </div>
+        </div>
+    </form>
 </div>
 <script>
 $(function(){
