--- a/app/views/master/performance/index.ejs
+++ b/app/views/master/performance/index.ejs
@@ -8,35 +8,37 @@ Aa-4
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 <script src="/js/master/performance.js"></script>
 <%- contentFor('body') %>
-<div class="container">
+<div class="col-sm-12">
     <form class="form-inline search">
-    <div class="form-group">
-<label>劇場</label>
-<select class="form-control" name="theater">
-    <option value="">選択してください</option>
-<% for (const theater of theaters) { %>
-    <option value="<%= theater.id %>"><%= theater.name.ja %></option>
-<% } %>
-</select>
-</div>
-<div class="form-group">
-<label>上映日</label>
-<select class="form-control" name="day">
-  <option value="">選択してください</option>
-<% 
-const now = 20171026;//Number(moment().format('YYYYMMDD')); 
-const start = now;
-const end = now + 5;
-%>
-<% for (let i = start; i < end; i++) { %>
-    <option value="<%= String(i) %>"><%= moment(String(i)).format('YYYY/MM/DD') %></option>
-<% } %>
-</select>
-</div>
-<button class="btn btn-default search-button">検索</button>
-</form>
-<a class="btn btn-primary pull-right add-button" href="#" role="button">新規作成</a>
-<div class="scheduler"></div>
+        <div class="form-group">
+            <label>劇場</label>
+            <select class="form-control" name="theater">
+                <option value="">選択してください</option>
+                <% for (const theater of theaters) { %>
+                <option value="<%= theater.id %>"><%= theater.name.ja %></option>
+                <% } %>
+            </select>
+        </div>
+        <div class="form-group">
+            <label>上映日</label>
+            <select class="form-control" name="day">
+            <option value="">選択してください</option>
+            <% 
+            const now = 20171026;//Number(moment().format('YYYYMMDD')); 
+            const start = now;
+            const end = now + 5;
+            %>
+            <% for (let i = start; i < end; i++) { %>
+                <option value="<%= String(i) %>"><%= moment(String(i)).format('YYYY/MM/DD') %></option>
+            <% } %>
+            </select>
+        </div>
+        <button class="btn btn-default search-button">検索</button>
+    </form>
+    <div class="panel-body">
+        <a class="btn btn-primary pull-right add-button" href="#" role="button">新規作成</a>
+    </div>
+    <div class="scheduler"></div>
 </div>
 
 <%- include('add') %>
