--- a/app/views/master/report/index.ejs
+++ b/app/views/master/report/index.ejs
@@ -1,35 +1,33 @@
 <script src="/js/master/reportSales.js"></script>
 <% /* フォーム */ %>
 <div class="col-sm-12 form-container search">
-  <form method="post" class="form-horizontal" >
-    <% /* 共通Hiddenコントロール */ %>
-    <%- include('../../common/master/_hidden') %>
-    <div class="menu-group">
-      <% /* メッセージ */ %>
-      <% if (filmModel.message != '') { %>
-          <p class="error message">
-            <%= filmModel.message %>
-          </p>
-      <% } %>
-    </div>
-    <% /* 集計期間 */ %>
-    <div class="form-group form-inline">
-      <label for="dateFrom" class="col-sm-2 control-label label-title">
-        集計期間
-      </label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control datepicker" name="dateFrom" id="dateFrom" />
-        ～
-        <input type="text" class="form-control datepicker" name="dateTo" id="dateTo" />
-      </div>
-    </div>
-    <% /* ダウンロードボタン */ %>
-    <div class="form-group">
-      <div class="btn-area">
-        <a class="btn btn-ok search"><span>レポートダウンロード</span></a>
-      </div>
-    </div>
-  </form>
+    <form method="post" class="form-horizontal" >
+        <% /* 共通Hiddenコントロール */ %>
+        <%- include('../../common/master/_hidden') %>
+        <div class="menu-group">
+            <% /* メッセージ */ %>
+            <% if (filmModel.message !== '') { %>
+            <p class="error message text-danger panel-body bg-danger"><%= filmModel.message %></p>
+            <% } %>
+        </div>
+        <% /* 集計期間 */ %>
+        <div class="form-group form-inline">
+            <label for="dateFrom" class="col-sm-3 control-label label-title">
+                集計期間
+            </label>
+            <div class="col-sm-9">
+                <input type="text" class="form-control datepicker" name="dateFrom" id="dateFrom" />
+                ～
+                <input type="text" class="form-control datepicker" name="dateTo" id="dateTo" />
+            </div>
+        </div>
+        <% /* ダウンロードボタン */ %>
+        <div class="form-group">
+            <div class="btn-area panel-body">
+                <a class="btn btn-ok search btn-primary"><span>レポートダウンロード</span></a>
+            </div>
+        </div>
+    </form>
 </div>
 <% /* 共通Loading */ %>
 <%- include('../../common/master/_loading') %>
