--- a/app/views/master/ticketType/index.ejs
+++ b/app/views/master/ticketType/index.ejs
@@ -18,35 +18,33 @@ Aa-6
     <div class="menu-group">
       <% /* メッセージ */ %>
       <% if (message !== '') { %>
-          <p class="error message">
-            <%= message %>
-          </p>
+      <p class="error message text-danger panel-body bg-danger"><%= message %></p>
       <% } %>
     </div>
     <% /* 券種コード */ %>
     <div class="form-group ">
-      <label for="ticketCode" class="col-sm-2 control-label label-title">
+      <label for="ticketCode" class="col-sm-3 control-label label-title">
       券種コード
       </label>
-      <div class="col-sm-10">
+      <div class="col-sm-9">
         <input type="text" class="form-control" name="ticketCode" id="ticketCode" placeholder="" maxlength=64 value=<%= req.body.ticketCode %>>
       </div>
     </div>
     <% /* 管理用券種名 */ %>
     <div class="form-group ">
-      <label for="managementTypeName" class="col-sm-2 control-label label-title">
+      <label for="managementTypeName" class="col-sm-3 control-label label-title">
       管理用券種名
       </label>
-      <div class="col-sm-10">
+      <div class="col-sm-9">
         <input type="text" class="form-control" name="managementTypeName" id="managementTypeName" placeholder="" maxlength=64 value=<%= req.body.ticketCode %>>
       </div>
     </div>
     <% /* 金額 */ %>
     <div class="form-group ">
-      <label for="ticketCharge" class="col-sm-2 control-label label-title">
+      <label for="ticketCharge" class="col-sm-3 control-label label-title">
       金額
       </label>
-      <div class="col-sm-10">
+      <div class="col-sm-9">
         <input type="text" class="form-control" name="ticketCharge" id="ticketCharge" placeholder="" maxlength=64 value=<%= req.body.ticketCode %>>
       </div>
     </div>
@@ -69,7 +67,7 @@ Aa-6
   <div id="list" class="table-responsive" style="display:none;">
     <table class="table table-bordered table-striped">
       <thead>
-        <tr style="background-color:#d9d9d9">
+        <tr>
           <th>券種コード</th>
           <!--<th>サイト表示用券種名</th>-->
           <th>管理用券種名</th>
