--- a/app/views/master/ticketTypeGroup/add.ejs
+++ b/app/views/master/ticketTypeGroup/add.ejs
@@ -7,28 +7,23 @@ Aa-7
     <% /* フォーム */ %>
     <form method="post" class="form-horizontal" >
         <div class="menu-group">
-            <div style="padding:0px 0px 4px 10px;" >
-                <a href="/master/tickettypes">券種グループマスタ一覧へ</a>
-            </div>
             <% /* メッセージ */ %>
             <% if (message != '') { %>
-            <p class="error message">
-            <%= message %>
-            </p>
+            <p class="error message text-danger panel-body bg-danger"><%= message %></p>
             <% } %>
         </div>
 
         <% /* 券種グループコード */ %>
         <div class="form-group ">
-            <label for="_id" class="col-sm-2 control-label label-title">
+            <label for="_id" class="col-sm-3 control-label label-title">
                 券種グループコード<font color="red">＊</font>
             </label>
-            <div class="col-sm-10">
+            <div class="col-sm-9">
                 <input type="text" class="form-control" name="_id" id="_id" placeholder="" maxlength=64 value="<%= forms._id %>">
                 <p class="message">
                 半角64文字以内でご入力ください。
                 </p>
-                <p class="error message">
+                <p class="error message text-danger">
                 <% if (errors && errors._id) { %>
                 <%- errors._id.msg %>
                 <% } %>
@@ -40,7 +35,7 @@ Aa-7
 
         <% /* 登録ボタン */ %>
         <div class="form-group">
-            <div class="btn-area">
+            <div class="btn-area panel-body">
                 <a class="btn btn-ok btn-primary">登録する</a>
             </div>
         </div>
