--- a/app/views/master/auth/login.ejs
+++ b/app/views/master/auth/login.ejs
@@ -22,7 +22,7 @@
                     <% } %>
                 </p>
             </div>
-            <button type="button" class="btn btn-ok btn-primary btn-lg">ログイン</button>
+            <button type="button" class="btn btn-ok btn-primary btn-lg btn-block">ログイン</button>
         </div><!-- /card-container -->
     </div><!-- /container -->
 </form>
