--- a/app/views/master/film/edit.ejs
+++ b/app/views/master/film/edit.ejs
@@ -12,7 +12,7 @@ Aa-2
     <form method="post" class="form-horizontal" >
         <div class="menu-group">
             <% /* メッセージ */ %>
-            <% if (message !== undefined) { %>
+            <% if (message !== '') { %>
             <p class="error message text-danger panel-body bg-danger"><%= message %></p>
             <% } %>
         </div>
