--- a/app/views/master/film/form.ejs
+++ b/app/views/master/film/form.ejs
@@ -71,6 +71,30 @@
         </p>
     </div>
 </div>
+<% /* 上映開始日 */ %>
+<div class="form-group">
+    <label for="sales_release_date" class="col-sm-3 control-label label-title">
+        上映開始日
+    </label>
+    <div class="col-sm-9">
+        <input class="form-control datepicker" style="width:30%;display:inline-block;" name="sales_release_date" id="sales_release_date" placeholder="" maxlength=10 value="<%= forms.sales_release_date %>">
+    </div>
+        <p class="error message text-danger">
+        <% if (errors && errors.minutes) { %>
+        <%- errors.minutes.msg %>
+        <% } %>
+        </p>    
+</div>
+<% /* 上映終了日 */ %>
+<div class="form-group">
+    <label for="sales_end_date" class="col-sm-3 control-label label-title">
+        上映終了日
+    </label>    
+    <div class="col-sm-9">
+        <input class="form-control datepicker" style="width:30%;display:inline-block;" name="sales_end_date" id="sales_end_date" placeholder="" maxlength=10 value="<%= forms.sales_end_date %>">
+    </div>
+    <p> </p>
+</div>
 <% /* レイティング */ %>
 <div class="form-group">
     <label for="ratings" class="col-sm-3 control-label label-title">
