--- a/app/views/master/film/index.ejs
+++ b/app/views/master/film/index.ejs
@@ -17,7 +17,7 @@ Aa-3
     <%- include('../../common/master/_hidden') %>
         <div class="menu-group">
             <% /* メッセージ */ %>
-            <% if (filmModel.message !== '') { %>
+            <% if (filmModel.message !== undefined) { %>
             <p class="error message text-danger panel-body bg-danger"><%= filmModel.message %></p>
             <% } %>
         </div>
