CHEVRE-58 販売開始日、販売終了日を登録　Enter押下でログイン、検索

--- a/app/views/master/auth/login.ejs
+++ b/app/views/master/auth/login.ejs
@@ -28,9 +28,14 @@
 </form>
 <script>
 $(function(){
+    $("#username").focus();
+    $('form').on('keydown', function(){
+        if(window.event.keyCode==13) $('form').submit()
+    });
     $('.btn-ok').on('click', function(){
         $('form').submit();
     });
 });
+
 </script>
 
