--- a/app/views/master/film/edit.ejs
+++ b/app/views/master/film/edit.ejs
@@ -43,6 +43,9 @@ $(function(){
     $('.btn-ok').on('click', function(){
         $('form').submit();
     });
-
+    // datepickerセット
+    $('.datepicker').datepicker({
+        language: 'ja'
+    })
 });
 </script>
