--- a/views/master/events/screeningEventSeries/form.ejs
+++ b/views/master/events/screeningEventSeries/form.ejs
@@ -11,6 +11,19 @@
         </select>
     </div>
 </div>
+<div class="form-group">
+    <label for="locationBranchCode" class="col-sm-3 control-label label-title">
+        作品<font color="red">＊</font>
+    </label>
+    <div class="col-sm-9">
+        <select class="form-control" name="movieIdentifier">
+            <option value="">選択してください</option>
+            <% for (const movie of movies) { %>
+            <option value="<%= movie.identifier %>"<% if (forms.movieIdentifier === movie.identifier) { %> selected<% } %>><%= movie.name %></option>
+            <% } %>
+        </select>
+    </div>
+</div>
 <% /* 作品名 */ %>
 <div class="form-group">
     <label for="nameJa" class="col-sm-3 control-label label-title">
@@ -61,25 +74,6 @@
         <p class="error message text-danger">
         <% if (errors && errors.nameEn) { %>
         <%- errors.nameEn.msg %>
-        <% } %>
-        </p>
-    </div>
-</div>
-<% /* 上映時間 */ %>
-<div class="form-group">
-    <label for="duration" class="col-sm-3 control-label label-title">
-        上映時間
-    </label>
-    <div class="col-sm-9">
-        <input class="form-control" style="width:30%;display:inline-block;" name="duration" id="duration" placeholder="" maxlength=10 value="<%= forms.duration %>">
-        分
-        <p class="message">
-        <% /*半角10文字以内でご入力ください。*/ %>
-        半角10文字以内でご入力ください。
-        </p>
-        <p class="error message text-danger">
-        <% if (errors && errors.duration) { %>
-        <%- errors.duration.msg %>
         <% } %>
         </p>
     </div>
