--- a/views/master/events/screeningEventSeries/index.ejs
+++ b/views/master/events/screeningEventSeries/index.ejs
@@ -33,11 +33,11 @@ Aa-3
             </div>
         </div>
             <div class="form-group ">
-                <label for="identifier" class="col-sm-3 control-label label-title">
+                <label for="movieIdentifier" class="col-sm-3 control-label label-title">
                 作品コード
                 </label>
                 <div class="col-sm-9">
-                    <input type="text" class="form-control" name="identifier" id="identifier" placeholder="" maxlength=64 value="<%= filmModel.identifier %>">
+                    <input type="text" class="form-control" name="movieIdentifier" id="movieIdentifier" placeholder="" maxlength=64 value="<%= filmModel.movieIdentifier %>">
                 </div>
             </div>
             <div class="form-group form-inline">
@@ -102,7 +102,7 @@ Aa-3
             </thead>
             <tbody>
                 <tr id="templateRow" eventId="$id$">
-                    <td name="identifier">$identifier$</td>
+                    <td name="movieIdentifier">$movieIdentifier$</td>
                     <td name="filmNameJa__kanaName__filmNameEn">
                     $filmNameJa$<br/>
                     $kanaName$<br/>
