# CHEVRE-61 ### Changed - 予約管理サービスとして再構築。

--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -6,8 +6,8 @@
                 <h1 class="title">chevre</h1>
             </div>
             <div class="navbar-text navbar-right">
-                <span><%= user.profile.family_name %>
-                        <%= user.profile.given_name %></span>
+                <span><%= user.profile.family_name %></span>&nbsp;
+                <span><%= user.profile.given_name %></span>&nbsp;
                 <a class="btn btn-logout btn-default" href="<%= user.generateLogoutUrl() %>"><span>ログアウト</span></a>
             </div>
         </div>
