# CHEVRE-61 ### Changed - 予約管理サービスとして再構築。

--- a/views/common/master/_hidden.ejs
+++ b/views/common/master/_hidden.ejs
@@ -1,4 +1,2 @@
 <input type="hidden" name="apiEndpoint" value="<%= process.env.API_ENDPOINT %>">
-<% if (req && req.staffUser) { %>
-  <input type="hidden" name="username" value="<%- req.staffUser.get('username') %>">
-<% } %>
+<input type="hidden" name="limit" value="10">
