--- a/views/ticketTypeGroup/add.ejs
+++ b/views/ticketTypeGroup/add.ejs
@@ -15,17 +15,17 @@ Aa-7
 
         <% /* 券種グループコード */ %>
         <div class="form-group ">
-            <label for="_id" class="col-sm-3 control-label label-title">
+            <label for="id" class="col-sm-3 control-label label-title">
                 券種グループコード<font color="red">＊</font>
             </label>
             <div class="col-sm-9">
-                <input type="text" class="form-control" name="_id" id="_id" placeholder="" maxlength=64 value="<%= forms._id %>">
+                <input type="text" class="form-control" name="id" id="id" placeholder="" maxlength=64 value="<%= forms.id %>">
                 <p class="message">
                 半角64文字以内でご入力ください。
                 </p>
                 <p class="error message text-danger">
-                <% if (errors && errors._id) { %>
-                <%- errors._id.msg %>
+                <% if (errors && errors.id) { %>
+                <%- errors.id.msg %>
                 <% } %>
                 </p>
             </div>
