--- a/views/ticketTypeGroup/index.ejs
+++ b/views/ticketTypeGroup/index.ejs
@@ -23,20 +23,20 @@ Aa-8
     </div>
     <% /* 券種グループコード */ %>
     <div class="form-group ">
-      <label for="ticketGroupCode" class="col-sm-3 control-label label-title">
+      <label for="id" class="col-sm-3 control-label label-title">
       券種グループコード
       </label>
       <div class="col-sm-9">
-        <input type="text" class="form-control" name="ticketGroupCode" id="ticketGroupCode" placeholder="" maxlength=64 value=<%= req.body.ticketGroupCode %>>
+        <input type="text" class="form-control" name="id" id="id" placeholder="" maxlength=64>
       </div>
     </div>
     <% /* 券種グループ名 */ %>
     <div class="form-group ">
-      <label for="ticketGroupNameJa" class="col-sm-3 control-label label-title">
+      <label for="name" class="col-sm-3 control-label label-title">
       券種グループ名
       </label>
       <div class="col-sm-9">
-        <input type="text" class="form-control" name="ticketGroupNameJa" id="managementTypeName" placeholder="" maxlength=64 value=<%= req.body.ticketGroupNameJa %>>
+        <input type="text" class="form-control" name="name" id="name" placeholder="" maxlength=64>
       </div>
     </div>
     <% /* 検索ボタン */ %>
