--- a/views/ticketTypeGroup/update.ejs
+++ b/views/ticketTypeGroup/update.ejs
@@ -14,7 +14,7 @@ Aa-7
         </div>
 
         <% /* 券種グループコード */ %>
-        <input type="hidden" name="_id" value="<%= forms._id %>">
+        <input type="hidden" name="id" value="<%= forms.id %>">
 
         <%- include('form', { forms: forms }) %>
 
