--- a/views/ticketType/update.ejs
+++ b/views/ticketType/update.ejs
@@ -19,7 +19,7 @@ Aa-5
       <% } %>
   </div>
 
-  <input type="hidden" name="ticketCode" value="<%= forms.ticketCode %>">
+  <input type="hidden" name="id" value="<%= forms.id %>">
   
   <%- include('form', {forms: forms}) %>
 
