--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -29,6 +29,9 @@
             <li class="<%= (displayId === 'Aa-8') ? 'active': ''; %>"><a href="/ticketTypeGroups">
                     <i class="glyphicon glyphicon-list"></i> 券種グループ一覧</a>
             </li>
+            <li class="<%= (displayId === 'Aa-11') ? 'active': ''; %>"><a href="/reservations">
+                    <i class="glyphicon glyphicon-list"></i> 予約管理</a>
+            </li>
         </ul>
     </div>
     <!-- <div class="panel panel-default">
