--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="navbar-header">
                 <img class="img-circle logo" src="/images/ProjectIcon.png" alt="">
-                <h1 class="title">chevre</h1>
+                <h1 class="title">Chevre</h1>
             </div>
             <div class="navbar-text navbar-right">
                 <span><%= user.profile.family_name %></span>&nbsp;
